--- a/aula/WebContent/template.xhtml
+++ b/aula/WebContent/template.xhtml
@@ -89,6 +89,7 @@
 	<script src="js/jquery.mask.js"></script>
 	<script src="js/jquery.mask.min.js"></script>
 
+	<ui:insert name="script"></ui:insert>
 	
 </body>
 </html>
