--- a/aula/WebContent/template.xhtml
+++ b/aula/WebContent/template.xhtml
@@ -1,5 +1,3 @@
-<!DOCTYPE html>
-<!-- saved from url=(0050)http://getbootstrap.com/examples/starter-template/ -->
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:pt="http://xmlns.jcp.org/jsf/passthrough"
@@ -8,7 +6,7 @@
 	xmlns:ui="http://java.sun.com/jsf/facelets">
 
 
-<head>
+<h:head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"></meta>
 
 <meta http-equiv="X-UA-Compatible" content="IE=edge"></meta>
@@ -40,9 +38,9 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-</head>
+</h:head>
 
-<body>
+<h:body>
 
 	<nav class="navbar navbar-inverse navbar-fixed-top">
 		<div class="container">
@@ -91,6 +89,6 @@
 
 	<ui:insert name="script"></ui:insert>
 	
-</body>
+</h:body>
 </html>
 
