--- a/aula/WebContent/cadCliente.xhtml
+++ b/aula/WebContent/cadCliente.xhtml
@@ -85,12 +85,27 @@
 				</div>
 			</div>
 			<div class="form-group">
+				<label for="estado" class="col-sm-2 control-label">Estado</label>
+				<div class="col-sm-10">
+					<h:selectOneMenu id="estado" class="form-control"
+						value="#{mBeanCliente.idEstado}">
+						
+						<f:selectItems value="#{mBeanCliente.estados}"
+							var="estado"
+							itemLabel="#{estado.nome}"
+							itemValue="#{estado.id}"></f:selectItems>
+						
+					</h:selectOneMenu>
+				</div>
+			</div>
+			<div class="form-group">
 				<div class="col-sm-offset-2 col-sm-10">
 					<input jsf:id="salvar" type="submit" class="btn btn-default"
 						value="Salvar" jsf:action="#{mBeanCliente.salvar}" />
 				</div>
 			</div>
-			<h:graphicImage value="ImagemClienteServlet?id=#{mBeanCliente.id}"
+			<h:graphicImage 
+			value="ImagemClienteServlet?id=#{mBeanCliente.id}"
 			width="30%" height="30%"></h:graphicImage>
 
 
@@ -107,6 +122,10 @@
 				<h:column>
 					<f:facet name="header">Gênero</f:facet>
 					<h:outputText value="#{cliente.genero}"></h:outputText>
+				</h:column>
+				<h:column>
+					<f:facet name="header">Estado</f:facet>
+					<h:outputText value="#{cliente.estado.nome}"></h:outputText>
 				</h:column>
 				<h:column>
 					<f:facet name="header">Data de Nascimento</f:facet>
