--- a/aula/WebContent/clientes.xhtml
+++ b/aula/WebContent/clientes.xhtml
@@ -23,6 +23,10 @@
 		Nome: <h:outputText value="#{cliente.nome}"></h:outputText>
 		<br/>
 		Idade: <h:outputText value="#{cliente.idade}"></h:outputText>
+		<br/>
+		<h:graphicImage 
+			value="ImagemClienteServlet?id=#{cliente.id}"
+			width="30%" height="30%"></h:graphicImage>
 		
 		<br/>
 		
