conversao do projeto em MAVEN

--- a/aula/WebContent/secure/carrinho.xhtml
+++ b/aula/WebContent/secure/carrinho.xhtml
@@ -7,7 +7,7 @@
 	xmlns:f="http://xmlns.jcp.org/jsf/core"
 	xmlns:ui="http://java.sun.com/jsf/facelets">
 
-	<ui:composition template="template.xhtml">
+	<ui:composition template="../template.xhtml">
 	
 		<ui:define name="title">
 		Carrinho
