--- a/aula4etapa/WebContent/formulario.xhtml
+++ b/aula4etapa/WebContent/formulario.xhtml
@@ -42,7 +42,7 @@
 
 		<h1>Cadastro de Jogo</h1>
 		<form jsf:id="form" method="post">
-
+			<h:messages></h:messages>
 
 			<div class="form-group row">
 				<label for="codigoJogo" class="col-sm-2 col-form-label">Código
