--- a/aula4etapa/WebContent/cadastroJogo.xhtml
+++ b/aula4etapa/WebContent/cadastroJogo.xhtml
@@ -4,41 +4,12 @@
 	xmlns:jsf="http://xmlns.jcp.org/jsf"
 	xmlns:f="http://xmlns.jcp.org/jsf/core"
 	xmlns:ui="http://java.sun.com/jsf/facelets">
-<h:head>
-	<title>Cadastro de Jogo</title>
 
-	<!-- IMPORTAÇÃO DO CSS DO BOOTSTRAP -->
-	<link href="css/bootstrap.min.css" rel="stylesheet" />
+<ui:composition template="template.xhtml">
 
-</h:head>
-<h:body>
+	<ui:define name="title">Cadastro de Jogos</ui:define>
 
-	<nav class="navbar navbar-expand-lg navbar-light bg-light">
-		<a class="navbar-brand" href="#">Sistema de Jogos</a>
-		<button class="navbar-toggler" type="button" data-toggle="collapse"
-			data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown"
-			aria-expanded="false" aria-label="Toggle navigation">
-			<span class="navbar-toggler-icon"></span>
-		</button>
-		<div class="collapse navbar-collapse" id="navbarNavDropdown">
-			<ul class="navbar-nav">
-				<li class="nav-item active"><a class="nav-link" href="#">Home
-						<span class="sr-only">(current)</span>
-				</a></li>
-				<li class="nav-item dropdown"><a
-					class="nav-link dropdown-toggle" href="#"
-					id="navbarDropdownMenuLink" data-toggle="dropdown"
-					aria-haspopup="true" aria-expanded="false">Cadastros </a>
-					<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-						<a class="dropdown-item" href="#">Jogos</a> <a
-							class="dropdown-item" href="#">Jogadores</a> <a
-							class="dropdown-item" href="#">Personagens</a>
-					</div></li>
-			</ul>
-		</div>
-	</nav>
-
-	<div class="container">
+	<ui:define name="conteudo">
 
 		<h1>Cadastro de Jogo</h1>
 		<form jsf:id="form" method="post">
@@ -57,7 +28,8 @@
 				<label class="col-sm-2 col-form-label">Nome do Jogo: </label>
 				<div class="col-sm-10">
 					<input jsf:id="nomeJogo" jsf:value="#{mBeanJogo.nome}" type="text"
-						class="form-control" placeholder="Digite o nome do jogo" />
+						class="form-control" placeholder="Digite o nome do jogo"
+						required="required" />
 				</div>
 			</div>
 
@@ -83,8 +55,8 @@
 				<label class="col-sm-2 col-form-label">Modo do Jogo: </label>
 
 				<div class="col-sm-10">
-					<input type="radio" name="modoJogo" class="form-control" />Single <input
-						type="radio" name="modoJogo" class="form-control" />Multi
+					<input type="radio" name="modoJogo" class="form-control" />Single
+					<input type="radio" name="modoJogo" class="form-control" />Multi
 				</div>
 			</div>
 
@@ -106,17 +78,11 @@
 				</div>
 			</div>
 
-			
+
 			<input type="submit" jsf:id="btnSalvar"
 				jsf:action="#{mBeanJogo.salvar}" value="Salvar"
-				class="btn btn-primary">
-			
-			<f:ajax event="action" execute="@form" render="@form"></f:ajax>
-			
-			
-			</input>
-			
-			 <input type="reset" value="Limpar" class="btn btn-primary" />
+				class="btn btn-primary"> </input> <input type="reset" value="Limpar"
+				class="btn btn-primary" />
 
 
 
@@ -143,17 +109,17 @@
 
 		</form>
 
-	</div>
+	</ui:define>
+	
+	<ui:define name="script">
+		
+		<script>
 
-	<script src="js/jquery.min.js"></script>
-	<script src="js/popper.js"></script>
-	<script src="js/bootstrap.min.js"></script>
+		
+		</script>
+	
+	</ui:define>
 
-	<script src="js/jquery.mask.min.js"></script>
+</ui:composition>
 
-	<script>
-		$('#data').mask('00/00/0000');
-	</script>
-
-</h:body>
 </html>
