inclusao do JPA.

--- a/aula4etapa/WebContent/cadastroJogo.xhtml
+++ b/aula4etapa/WebContent/cadastroJogo.xhtml
@@ -63,7 +63,7 @@
 			<div class="form-group row">
 				<label class="col-sm-2 col-form-label">Tipo do Jogo: </label>
 				<div class="col-sm-10">
-					<select name="tipoJogo" class="form-control">
+					<select jsf:id="tipoJogo" jsf:value="#{mBeanJogo.tipoJogo}" class="form-control">
 						<option>Aventura</option>
 						<option>Tiro</option>
 					</select>
