inclusao do projeto rest.

--- a/aula4etapa/WebContent/cadastroJogo.xhtml
+++ b/aula4etapa/WebContent/cadastroJogo.xhtml
@@ -116,7 +116,7 @@
 
 				<ui:repeat var="jogo" value="#{mBeanJogo.jogos}">
 					<tr>
-						<td>1</td>
+						<td>#{jogo.id}</td>
 						<td>#{jogo.nome}</td>
 						<td></td>
 						<td></td>
