--- a/aula4etapa/WebContent/cadastroJogo.xhtml
+++ b/aula4etapa/WebContent/cadastroJogo.xhtml
@@ -12,7 +12,7 @@
 	<ui:define name="conteudo">
 
 		<h1>Cadastro de Jogo</h1>
-		<form jsf:id="form" method="post">
+		<form jsf:id="form" method="post" enctype="multipart/form-data">
 			<h:messages></h:messages>
 
 			<div class="form-group row">
@@ -21,6 +21,15 @@
 				<div class="col-sm-10">
 					<input type="text" jsf:id="id" jsf:value="#{mBeanJogo.id}" class="form-control"
 						placeholder="Digite o código do jogo" readonly="readonly" />
+				</div>
+			</div>
+			
+			<div class="form-group row">
+				<label class="col-sm-2 col-form-label">Imagem: </label>
+				<div class="col-sm-10">
+					<input type="file" 
+					jsf:id="imagem" jsf:value="#{mBeanJogo.imagem}"
+					class="form-control" />
 				</div>
 			</div>
 
@@ -59,16 +68,18 @@
 				</div>
 			</div>
 			
-
-			<!-- <div class="form-group row">
+			 <div class="form-group row">
 				<label class="col-sm-2 col-form-label">Tipo do Jogo: </label>
 				<div class="col-sm-10">
-					<select jsf:id="tipoJogo" jsf:value="#{mBeanJogo.tipoJogo}" class="form-control">
-						<option>Aventura</option>
-						<option>Tiro</option>
-					</select>
+					<h:selectOneMenu value="#{mBeanJogo.tipoJogo}"
+						styleClass="form-control">
+						<f:selectItem itemValue="Aventura"></f:selectItem>
+						<f:selectItem itemValue="Tiro"></f:selectItem>
+					</h:selectOneMenu>					
 				</div>
 			</div>
+
+			<!--
 
 			<div class="form-group row">
 				<label class="col-sm-2 col-form-label">Modo do Jogo: </label>
