inclusão de session.

--- a/aula4etapa/WebContent/template.xhtml
+++ b/aula4etapa/WebContent/template.xhtml
@@ -17,7 +17,7 @@
 <h:body>
 
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
-		<a class="navbar-brand" href="#">Sistema de Jogos Muito</a>
+		<a class="navbar-brand" href="telaPrincipal.jsf">Sistema de Jogos Muito</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse"
 			data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown"
 			aria-expanded="false" aria-label="Toggle navigation">
@@ -25,7 +25,7 @@
 		</button>
 		<div class="collapse navbar-collapse" id="navbarNavDropdown">
 			<ul class="navbar-nav">
-				<li class="nav-item active"><a class="nav-link" href="#">Home
+				<li class="nav-item active"><a class="nav-link" href="telaPrincipal.jsf">Home
 						<span class="sr-only">(current)</span>
 				</a></li>
 				<li class="nav-item dropdown"><a
