inclusão de comentários

--- a/aula4etapa/WebContent/login.xhtml
+++ b/aula4etapa/WebContent/login.xhtml
@@ -15,7 +15,8 @@
 
 			
 			<div style="width: 50%; margin:0 auto;">
-				<h:messages styleClass="alert alert-danger"></h:messages>
+				<h:messages styleClass="alert alert-danger">
+				</h:messages>
 			
 				<h2 class="form-signin-heading">Login</h2>
 				<label for="email" class="sr-only">E-mail</label> 
