conversão para projeto maven.

--- a/aula4etapa/WebContent/cadastroJogo.xhtml
+++ b/aula4etapa/WebContent/cadastroJogo.xhtml
@@ -12,7 +12,8 @@
 	<ui:define name="conteudo">
 
 		<h1>Cadastro de Jogo</h1>
-		<form jsf:id="form" method="post" enctype="multipart/form-data">
+		<form jsf:id="form" method="post" 
+		enctype="multipart/form-data">
 			<h:messages></h:messages>
 
 			<input type="hidden"
